# ai-learning

./: .gitignore  OVERVIEW.md  pyproject.toml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/src/api/: __init__.py  __main__.py  app.py  router.py
apps/api/src/api/core/: __init__.py  config.py  db.py  dependencies.py  exceptions.py  lifespan.py  logging.py  schemas.py
apps/api/src/api/core/middleware/: __init__.py  request_id.py
apps/api/src/api/modules/: __init__.py
apps/api/src/api/modules/health/: __init__.py  router.py  schemas.py  service.py
apps/api/tests/: conftest.py  test_health.py
apps/worker/: pyproject.toml
