[project]
name = "api"
version = "0.1.0"
description = "Lumen API — HTTP service for the AI study co-pilot"
readme = "README.md"
authors = [
    { name = "Mohammad Zbib", email = "mohammad.h.zbib@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "pydantic-settings>=2.14.2",
    "shared",
]

[project.scripts]
api = "api:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
shared = { workspace = true }
