[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mohammad Zbib", email = "mohammad.h.zbib@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "shared",
]

[project.scripts]
worker = "worker:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
shared = { workspace = true }
